[package]
authors = ["Cameron Kinsella"]
name = "runzip"
description = "Tool for extracting zip archives"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
encoding_rs = "0.8"
unrar = "0.5.6"
uuid = { version = "1", features = ["v4"] }
zip = { version = "0.6", features = ["deflate", "aes-crypto"] }
